--- a/VersionChanger/VersionChanger.csproj
+++ b/VersionChanger/VersionChanger.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataObjects\Parameter.cs" />
     <Compile Include="FileHelper.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Program.cs" />
