--- a/VersionChanger/VersionChanger.csproj
+++ b/VersionChanger/VersionChanger.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataObjects\ArgumentValue.cs" />
     <Compile Include="DataObjects\Parameter.cs" />
     <Compile Include="FileHelper.cs" />
     <Compile Include="Global.cs" />
