--- a/VersionChanger/VersionChangerConfig.json
+++ b/VersionChanger/VersionChangerConfig.json
@@ -5,7 +5,10 @@
         "Build": 3,
         "Revision": 4
     },
-    "AssemblyInfoFile": "E:\\Proggen\\Appz\\VersionChanger\\TestFiles\\TestAssemblyInfo.cs",
+    "AssemblyInfoFile": [
+        "E:\\Proggen\\Appz\\VersionChanger\\TestFiles\\SecondAssemblyInfo.cs",
+        "E:\\Proggen\\Appz\\VersionChanger\\TestFiles\\TestAssemblyInfo.cs"
+    ],
     "Format": 2,
-    "VersionType": 1
+    "VersionType": 2
 }
